--- a/css/responsive.css
+++ b/css/responsive.css
@@ -535,6 +535,7 @@
     }
     .problem h2.title.bottom span:after {
         left: 50%;
+        transform: translateX(-50%);
     }
     .problem h2.title+p {
         max-width: 100%;
@@ -569,6 +570,7 @@
     }
     h2.title.orange span:after {
         left: 50%;
+        transform: translate(-50%);
     }
     .solutions-inner .solution-box {
         max-width: 75%;
@@ -597,6 +599,7 @@
     }
     .benefits .title {
         max-width: 90%;
+        margin: 0 auto;
     }
     .benefits+.home-contact {
         margin-top: -300px;
@@ -829,6 +832,7 @@
     .why-blockchain-content h2.title.bottom span:after,
     .blockchain-contracts-content .title span:after {
         left: 50% !important;
+        transform: translateX(-50%) !important;
     }
     .blockchain-contracts {
         background-color: #f4f4f4;
@@ -1006,6 +1010,21 @@
     .sylosis-product-details .action {
         background-color: #ffffff;
     }
+    .sylosis-product-details.product-details-2 .title-image-wrapper {
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+    .sylosis-product-details.product-details-2 .title-image-wrapper img {
+        max-width: 190px;
+    }
+    .sylosis-product-details.product-details-2 .title-image-wrapper+.title {
+        font-size: 14px;
+        font-weight: normal !important;
+        margin-top: -120px;
+    }
+    .sylosis-product-details.product-details .product-list {
+        margin-top: 0;
+    }
     /* harvx page ============================= */
     .harvx-producer {
         padding: 50px 0;
@@ -1141,6 +1160,9 @@
         margin-bottom: 15px;
         top: 0;
     }
+    .product-details.harvx-product-details .title-image-wrapper img {
+        max-width: 190px;
+    }
     .harvx-product-details.product-details-2 .product-list {
         margin-top: 0;
     }
@@ -1250,6 +1272,9 @@
     }
     .seed-product-details .title-image-wrapper {
         margin-bottom: 20px;
+    }
+    .seed-product-details .title-image-wrapper img {
+        max-width: 190px;
     }
     .product-details-2.seed-product-details .title-image-wrapper+.title {
         font-size: 14px;
@@ -1419,7 +1444,7 @@
         margin-top: -125px;
     }
     .sylosis-process .container {
-        padding: 75px 0 100px;
+        padding: 75px 15px 100px 15px;
     }
     .about-sylosis-content p {
         max-width: 90%;
@@ -1432,6 +1457,9 @@
     }
     .how-does-it-works .work-process-list .owl-nav {
         display: none;
+    }
+    .banner-sylosis .title-image {
+        max-width: 200px;
     }
     /* new banner============================== */
     .banner-producer {
@@ -1448,5 +1476,51 @@
         height: 30px;
         width: 30px;
         font-size: 25px !important;
+    }
+    .banner-harvx .title-image {
+        max-width: 190px;
+        margin-bottom: 20px;
+    }
+    .harvx-producer-content p,
+    .harvx-drivers p {
+        font-size: 14px;
+    }
+    .harvx-product-details.product-details-2 {
+        margin-top: 100px;
+    }
+    .banner-2 {
+        background-size: cover;
+        background-position: right;
+    }
+    .banner-blockchain, .banner-seed-audit {
+        background-position: center;
+    }
+    .banner-buyers {
+        background-image: url(../images/buyers/buyers-banner-mob.png) !important;
+        background-position: center;
+    }
+    .banner-products {
+        background-position: center;
+        background-image: url(../images/products/products-banner-mobile.png) !important;
+        padding-top: 80px;
+    }
+    .banner-products .container-inner {
+        max-width: 100%;
+        font-size: 13px;
+    }
+    .banner-floating {
+        top: -5vh;
+    }
+    .banner-solution{
+        background-image: url(../images/solutions/mob-solution-banner-2.png) !important;
+        background-position: center;
+    }
+    .banner-sylosis{
+            background-position: left;
+    }
+    .banner-trumodity{
+        background-image: url(../images/trumodity/trumodity-banner-mob.png) !important;
+        background-position: center;
+
     }
 }
