--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1329,6 +1329,22 @@
         width: 200%;
         max-width: none;
     }
+    /* privay policy page=============== */
+    .privacy-policy-main {
+        padding: 50px 0;
+    }
+    .privacy-policy-main+.home-contact {
+        margin-top: 0;
+    }
+    .common-box h2.title.text-left {
+        text-align: center !important;
+    }
+    .common-box h2.title.text-left span {
+        padding-bottom: 20px;
+    }
+    .common-box p {
+        text-align: justify;
+    }
 }
 
 @media(min-width:768px) {
